--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,9 +15,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.9",
     "@reduxjs/toolkit": "^2.1.0",
+    "@testing-library/jest-dom": "^6.4.2",
     "axios": "^1.6.7",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
+    "husky": "^9.0.10",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
