--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -19,6 +19,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "jest"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
