--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,11 +16,11 @@
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.18.1",
-    "husky": "^9.0.10",
     "pg": "^8.8.0",
     "prettier": "^2.7.1"
   },
   "devDependencies": {
+    "husky": "8.0.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.8",
