--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,10 +1,12 @@
 pre-commit:
-  parallel: true
+  piped: true
   commands:
-    lint:
-      glob: '*.{ts,tsx}'
-      run: yarn eslint {staged_files}
     prettier:
       glob: '*.{ts,tsx,css}'
       run: yarn prettier -w {staged_files}
       stage_fixed: true
+    lint:
+      glob: '*.{ts,tsx}'
+      run: yarn eslint {staged_files}
+    test:
+      run: yarn test
