--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,13 +11,21 @@
     "test": "jest ./"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.9",
+    "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.7",
     "dotenv": "^16.0.2",
-    "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "eslint-config-prettier": "^8.5.0",
+    "sass": "^1.70.0",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.8",
     "@types/react": "^18.0.17",
