--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.9",
+    "@mui/x-data-grid": "^6.19.4",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "dotenv": "^16.0.2",
