--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "test": "jest ./"
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
