--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,13 +27,16 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.4.0",
+    "@types/enzyme": "^3.10.18",
     "@types/jest": "^28.1.8",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-react": "^2.0.1",
+    "canvas": "^2.11.2",
+    "enzyme": "^3.11.0",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "identity-obj-proxy": "^3.0.0",
