Настройка vite, express, client для SSR

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -19,6 +19,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "jest"],
+  "include": ["src", "jest", "ssr.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
