--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -17,8 +17,7 @@
     "noUnusedParameters": true,
     "noUnusedLocals": true,
     "forceConsistentCasingInFileNames": true,
-    "importsNotUsedAsValues": "error",
-    "lib": ["es2019", "esnext.asynciterable"],
+    "lib": ["es2019", "esnext.asynciterable", "dom"],
     "types": ["node", "jest"],
     "baseUrl": ".",
     "paths": {
