--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -19,7 +19,7 @@
     "forceConsistentCasingInFileNames": true,
     "lib": ["es2019", "esnext.asynciterable", "dom"],
     "types": ["node", "jest"],
-    "baseUrl": ".",
+    "baseUrl": "./server",
     "paths": {
       "*": ["types/*"]
     },
