--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "tsc --project tsconfig.server.json && cross-env NODE_ENV=development node server/index.js",
     "build": "tsc && yarn build:ssr && yarn build:spa",
     "build:spa": "vite build --config vite.config.ts",
     "build:ssr": "vite build --config ssr.config.ts",
@@ -21,11 +21,13 @@
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "dotenv": "^16.0.2",
+    "express": "^4.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "vite": "^5.2.6"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
@@ -48,8 +50,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.70.0",
     "ts-jest": "^28.0.8",
-    "typescript": "^4.8.2",
-    "vite": "^3.0.7"
+    "typescript": "^4.8.2"
   },
   "license": "MIT"
 }
