--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,7 +6,7 @@
     "dev": "tsc --project tsconfig.server.json && cross-env NODE_ENV=development node server/index.js",
     "build": "tsc && yarn build:ssr && yarn build:spa",
     "build:spa": "vite build --config vite.config.ts",
-    "build:ssr": "vite build --config ssr.config.ts",
+    "build:ssr": "vite build --config vite.config.server.ts",
     "preview": "vite preview",
     "lint": "eslint .",
     "format": "prettier --write .",
