--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,7 +20,6 @@
     "prettier": "^2.7.1"
   },
   "devDependencies": {
-    "lefthook": "^1.3.9",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.8",
@@ -30,11 +29,13 @@
     "babel-jest": "^29.0.1",
     "eslint": "^8.23.0",
     "jest": "^28",
+    "lefthook": "^1.3.9",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "vite": "^5.2.6"
   },
   "license": "MIT"
 }
