--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -17,6 +17,7 @@
     "noUnusedParameters": true,
     "noUnusedLocals": true,
     "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
     "lib": ["es2019", "esnext.asynciterable", "dom"],
     "types": ["node", "jest"],
     "baseUrl": "./server",
