--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsc --project tsconfig.server.json && cross-env NODE_ENV=development node server/index.js",
-    "build": "tsc && yarn build:ssr && yarn build:spa",
+    "build": "tsc && yarn build:ssr & yarn build:spa & wait",
     "build:spa": "vite build --config vite.config.ts",
     "build:ssr": "vite build --config vite.config.server.ts",
     "preview": "vite preview",
