--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "composite": true,
     "target": "es2019",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "ESNext",
+    "moduleResolution": "NodeNext",
     "esModuleInterop": true,
     "sourceMap": true,
     "declaration": true,
@@ -17,7 +17,6 @@
     "noUnusedParameters": true,
     "noUnusedLocals": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
     "lib": ["es2019", "esnext.asynciterable", "dom"],
     "types": ["node", "jest"],
     "baseUrl": "./server",
