--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "lerna run test",
     "lint": "lerna run lint",
     "format": "lerna run format",
-    "preview": "lerna run preview"
+    "preview": "lerna run preview --scope=server"
   },
   "license": "MIT",
   "workspaces": [
