--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,17 +3,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && yarn build:ssr && yarn build:spa",
+    "dev": "tsc --project tsconfig.server.json",
+    "build": "tsc --project tsconfig.server.json && yarn build:ssr & yarn build:spa & wait",
     "build:spa": "vite build --config vite.config.ts",
-    "build:ssr": "vite build --config ssr.config.ts",
-    "preview": "vite preview",
+    "build:ssr": "vite build --config vite.config.server.ts",
+    "preview": "node ../server/dist/src/index.js",
     "lint": "eslint .",
     "format": "prettier --write .",
     "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
+    "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.9",
@@ -21,12 +22,13 @@
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "dotenv": "^16.0.2",
-    "lefthook": "^1.6.3",
+    "express": "^4.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "vite": "^5.2.6"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
@@ -49,8 +51,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.70.0",
     "ts-jest": "^28.0.8",
-    "typescript": "^4.8.2",
-    "vite": "^3.0.7"
+    "typescript": "^4.8.2"
   },
   "license": "MIT"
 }
