--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,10 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "scripts": {
-    "build": "tsc --p ./tsconfig.prod.json",
-    "preview": "node ./dist/index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.ts",
+    "build": "rm -rf ./dist && tsc --p ./tsconfig.prod.json",
+    "preview": "node ./dist/src/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "lint": "eslint .",
     "format": "prettier --write .",
     "test": "jest ."
@@ -16,7 +17,6 @@
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.18.1",
-    "lefthook": "^1.6.3",
     "pg": "^8.8.0",
     "prettier": "^2.7.1"
   },
@@ -30,11 +30,13 @@
     "babel-jest": "^29.0.1",
     "eslint": "^8.23.0",
     "jest": "^28",
+    "lefthook": "^1.3.9",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "vite": "^5.2.6"
   },
   "license": "MIT"
 }
