--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,11 +11,15 @@
     "test": "jest ."
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "axios": "^1.6.8",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.18.1",
+    "express-http-proxy": "^2.0.0",
     "pg": "^8.8.0",
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.2.2",
@@ -27,6 +31,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-http-proxy": "^1.6.6",
     "@types/jest": "^28.1.8",
     "@types/pg": "^8.6.5",
     "@types/swagger-ui-express": "^4.1.6",
