--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "rm -rf ./dist && tsc --p ./tsconfig.prod.json",
+    "build": "rm -rf ./dist && npx tsc --p ./tsconfig.prod.json",
     "preview": "node ./dist/src/index.js",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "lint": "eslint .",
@@ -37,7 +37,7 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
-    "babel-jest": "^29.0.1",
+    "babel-jest": "^28.0.8",
     "eslint": "^8.23.0",
     "jest": "^28",
     "lefthook": "^1.3.9",
