PIX-42 Серверная инфраструктура для форума, эмодзи и темизации

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,7 +11,7 @@ services:
       - postgres
     networks:
       - postgres
-    command: yarn preview
+    command: npm run dev:server
 
   postgres:
     container_name: postgres
