--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "bootstrap": "yarn && node init.js && lerna clean && yarn && lerna bootstrap",
     "build": "lerna run build",
     "dev:client": "lerna run dev  --scope=client",
-    "dev:server": "lerna run dev --scope=server",
+    "dev:server": "cd ./packages/server && npm run dev",
     "dev": "lerna run dev",
     "test": "lerna run test",
     "lint": "lerna run lint",
@@ -22,5 +22,8 @@
   "devDependencies": {
     "@evilmartians/lefthook": "^1.3.9",
     "lerna": "^5.6.2"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
