--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: '3'
 
 services:
   pixel-punch-app:
+    restart: unless-stopped
+    env_file:
+      - ./.env
     container_name: pixel-punch-app
     build:
       context: .
@@ -27,8 +30,28 @@ services:
     restart: always
     networks:
       - postgres
+
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4:4.18
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: secret
+      PGADMIN_LISTEN_PORT: 80
+    ports:
+      - "8080:80"
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    depends_on:
+      - postgres
+    networks:
+      - postgres
+
 volumes:
   postgres:
+  pgadmin-data:
+
 networks:
   postgres:
     driver: bridge
