--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,9 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "scripts": {
     "build": "rm -rf ./dist && npx tsc --p ./tsconfig.prod.json",
-    "preview": "node ./dist/src/index.js",
+    "preview": "node --experimental-specifier-resolution=node ./dist/src/index.js",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "lint": "eslint .",
     "format": "prettier --write .",
