--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "bootstrap": "yarn && node init.js && lerna clean && yarn && lerna bootstrap",
     "build": "lerna run build",
-    "dev:client": "lerna run dev  --scope=client",
-    "dev:server": "cd ./packages/server && npm run dev",
+    "dev:client": "lerna run dev --scope=client",
+    "dev:server": "lerna run dev --scope=server",
     "dev": "lerna run dev",
     "test": "lerna run test",
     "lint": "lerna run lint",
