--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,9 +2,9 @@ version: '3'
 
 services:
   pixel-punch-app:
+    container_name: pixel-punch-app
     env_file:
       - ./.env
-    container_name: pixel-punch-app
     build:
       context: .
     ports:
@@ -13,7 +13,7 @@ services:
       - postgres
     networks:
       - postgres
-    command: yarn preview
+    command: npm run dev:server
 
   postgres:
     container_name: postgres
@@ -29,28 +29,8 @@ services:
     restart: always
     networks:
       - postgres
-
-  pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4:4.18
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: secret
-      PGADMIN_LISTEN_PORT: 80
-    ports:
-      - "8080:80"
-    volumes:
-      - pgadmin-data:/var/lib/pgadmin
-    depends_on:
-      - postgres
-    networks:
-      - postgres
-
 volumes:
   postgres:
-  pgadmin-data:
-
 networks:
   postgres:
     driver: bridge
