--- a/packages/client/tsconfig.server.json
+++ b/packages/client/tsconfig.server.json
@@ -7,5 +7,5 @@
     "esModuleInterop": true,
     "lib": ["es2019", "DOM"],
   },
-  "include": ["server/index.ts"]
+  "include": ["server/src/index.ts"]
 }
