--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "composite": true,
     "target": "ESNext",
-    "module": "ES2020",
+    "module": "CommonJS",
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "sourceMap": true,
