--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsc --project tsconfig.server.json",
-    "build": "yarn build:ssr && yarn build:spa && wait",
+    "build": "yarn build:ssr && yarn build:spa",
     "build:spa": "vite build --config vite.config.ts",
     "build:ssr": "vite build --config vite.config.server.ts",
     "preview": "node ../server/dist/src/index.js",
