--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,10 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "scripts": {
     "build": "rm -rf ./dist && npx tsc --p ./tsconfig.prod.json",
     "preview": "node --experimental-specifier-resolution=node ./dist/src/index.js",
-    "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
+    "dev": "cross-env NODE_ENV=development tsx src/index.ts",
     "lint": "eslint .",
     "format": "prettier --write .",
     "test": "jest ."
@@ -45,6 +46,7 @@
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
+    "tsx": "^4.7.2",
     "typescript": "^4.8.2",
     "vite": "^5.2.6"
   },
