--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,55 +2,39 @@ version: '3'
 
 services:
   pixel-punch-app:
+    container_name: pixel-punch-app
     env_file:
       - ./.env
-    container_name: pixel-punch-app
     build:
       context: .
-    ports:
-      - '3001:3001'
+      dockerfile: ./Dockerfile
+    restart: unless-stopped
     depends_on:
       - postgres
+    ports:
+      - '3001:3001'
     networks:
-      - postgres
-    command: yarn preview
+      - awesome-network
+    command: node --experimental-specifier-resolution=node /app/server/dist/src/index.js
 
   postgres:
     container_name: postgres
     image: postgres:14
-    ports:
-      - '${POSTGRES_PORT}:${POSTGRES_PORT}'
+    restart: always
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - '${POSTGRES_PORT}:${POSTGRES_PORT}'
     volumes:
       - ./postgresdata:/var/lib/postgresql/data
-    restart: always
     networks:
-      - postgres
-
-  pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4:4.18
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: secret
-      PGADMIN_LISTEN_PORT: 80
-    ports:
-      - "8080:80"
-    volumes:
-      - pgadmin-data:/var/lib/pgadmin
-    depends_on:
-      - postgres
-    networks:
-      - postgres
+      - awesome-network
 
 volumes:
   postgres:
-  pgadmin-data:
 
 networks:
-  postgres:
+  awesome-network:
     driver: bridge
