--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "build": "rm -rf ./dist && npx tsc --p ./tsconfig.prod.json",
+    "build": "npx tsc --p ./tsconfig.prod.json",
     "preview": "node --experimental-specifier-resolution=node ./dist/src/index.js",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "lint": "eslint .",
