fix(*): remove redundant files; fix docker; fix vite; typescript fixes

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,10 @@
-CLIENT_PORT=3000
 SERVER_PORT=3001
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 POSTGRES_PORT=5432
 POSTGRES_HOST=postgres
+PGADMIN_EMAIL=admin@admin.ru
+PGADMIN_PASSWORD=admin
+PGADMIN_PORT=5050
 INIT_DB=1
