--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
-version: '3'
+version: '3.9'
 
 services:
   pixel-punch-app:
     env_file:
-      - ./.env
+      - .env
     container_name: pixel-punch-app
     build:
       context: .
     ports:
       - '3001:3001'
     depends_on:
-      - postgres
+      - pgadmin
     networks:
       - postgres
     command: yarn preview
@@ -24,32 +24,29 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_DB: ${POSTGRES_DB}
+      PGDATA: /tmp
     volumes:
-      - ./postgresdata:/var/lib/postgresql/data
+      - ./tmp/pgdata:/var/lib/postgresql/data
     restart: always
     networks:
       - postgres
 
   pgadmin:
     container_name: pgadmin
-    image: dpage/pgadmin4:4.18
+    image: dpage/pgadmin4
     restart: always
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: secret
-      PGADMIN_LISTEN_PORT: 80
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+      PGADMIN_LISTEN_PORT: ${PGADMIN_PORT}
     ports:
-      - "8080:80"
+      - '${PGADMIN_PORT}:${PGADMIN_PORT}'
     volumes:
-      - pgadmin-data:/var/lib/pgadmin
+      - ./tmp/pgadmin:/var/lib/pgadmin
     depends_on:
       - postgres
     networks:
       - postgres
-
-volumes:
-  postgres:
-  pgadmin-data:
 
 networks:
   postgres:
