--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 
 services:
-  pixel-punch-app:
+  app:
+    platform: linux/amd64
     container_name: pixel-punch-app
     env_file:
       - .env
-    container_name: pixel-punch-app
     build:
       context: .
       dockerfile: ./Dockerfile
@@ -15,9 +15,7 @@ services:
       - postgres
     ports:
       - '3001:3001'
-    networks:
-      - postgres
-    command: yarn preview
+    command: node --experimental-specifier-resolution=node /app/server/dist/src/index.js
 
   postgres:
     container_name: postgres
@@ -32,8 +30,6 @@ services:
     volumes:
       - ./tmp/pgdata:/var/lib/postgresql/data
     restart: always
-    networks:
-      - postgres
 
   pgadmin:
     container_name: pgadmin
@@ -49,10 +45,3 @@ services:
       - ./tmp/pgadmin:/var/lib/pgadmin
     depends_on:
       - postgres
-    networks:
-      - postgres
-      - awesome-network
-
-networks:
-  awesome-network:
-    driver: bridge
