--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.9'
 
 services:
+  nginx:
+    depends_on:
+      - pixel-punch-app
+    restart: always
+    container_name: nginx
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    ports:
+      - '80:80'
+      - '443:443'
+    networks:
+      - postgres
+
   pixel-punch-app:
     env_file:
       - .env
