--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,10 @@ events {
 http {
   include mime.types;
 
+  upstream frontend_upstream {
+    server pixel-punch-app:3001;
+  }
+
   server {
     listen 80;
     listen [::]:80;
@@ -27,28 +31,28 @@ http {
 
     server_name pixelpunch.ya-praktikum.tech;
 
-    ssl_certificate /etc/nginx/ssl/live/pixelpunch.ya-praktikum.tech/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/pixelpunch.ya-praktikum.tech/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/pixelpunch.ya-praktikum.tech/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/pixelpunch.ya-praktikum.tech/privkey.pem;
 
     location / {
       proxy_set_header   X-Scheme $scheme;
       proxy_set_header   X-Forwarded-For $remote_addr;
       proxy_set_header   Host $http_host;
-      proxy_pass         http://pixel-punch-app:3000;
+      proxy_pass         http://frontend_upstream;
     }
 
     location /api {
       proxy_set_header   X-Scheme $scheme;
       proxy_set_header   X-Forwarded-For $remote_addr;
       proxy_set_header   Host $http_host;
-      proxy_pass         http://pixel-punch-app:3001;
+      proxy_pass         http://frontend_upstream;
     }
 
     location /api/v2 {
       proxy_set_header   X-Scheme $scheme;
       proxy_set_header   X-Forwarded-For $remote_addr;
       proxy_set_header   Host $http_host;
-      proxy_pass         http://pixel-punch-app:3001;
+      proxy_pass         http://frontend_upstream;
     }
   }
 }
